# Shadpedia

./: .gitignore  .impeccable.md  .mcp.json  .oxfmtrc.json  README.md  bts.jsonc  docker-compose.yml  justfile  next.config.ts  package.json  skills-lock.json  tsconfig.json
.design/: preset.json  variant.json
.playwright-mcp/: page-2026-04-22T07-55-52-644Z.yml
apps/api/: Dockerfile  db.py  justfile  main.py  pyproject.toml
apps/api/routes/: health.py
apps/api/workflows/: client.py  functions.py
apps/web/: next.config.ts  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  proxy.ts  routeTree.gen.ts
apps/web/src/app/: layout.tsx  manifest.ts  page.tsx
apps/web/src/app/_components/: header.tsx  mode-toggle.tsx
apps/web/src/app/_context/: providers.tsx  server-providers.tsx
apps/web/src/app/api/trpc/[trpc]/: route.ts
apps/web/src/app/browse/: page.tsx
apps/web/src/app/sandbox/: page.tsx
apps/web/src/app/spadmin/: component-preview.tsx  jobs-table.tsx  main.ts  page.tsx  stagehand.tsx
apps/web/src/components/: header.tsx  mode-toggle.tsx  providers.tsx
apps/web/src/context/: providers.tsx  theme-provider.tsx
apps/web/src/routes/: __root.tsx  browse.tsx  index.tsx
apps/web/src/routes/components/: $slug.tsx
apps/web/src/server/stagehand/: errors.ts  index.ts  utils.ts
apps/web/src/utils/: trpc.ts
docs/: registry-and-previews.md
src/: components.json
src/app/: layout.tsx  page.tsx
src/components/: mode-toggle.tsx
src/components/ui/: card.tsx  checkbox.tsx
src/context/: providers.tsx
src/styles/: globals.css
(+4 files in other folders)
